--- a/profesionales/templates/profesionales/profesional_form.html
+++ b/profesionales/templates/profesionales/profesional_form.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Nuevo Profesional</h2>
+    <h2>{{subtitle}}</h2>
     <a role="button" class="btn btn-warning btn-sm active" href="{% url 'profesionales.lista' %}">Volver a la lista</a>
     <form method="post" novalidate>
     {% csrf_token %}
