--- a/profesionales/templates/profesionales/consulta_createview.html
+++ b/profesionales/templates/profesionales/consulta_createview.html
@@ -13,7 +13,12 @@
 
     <hr>
     <h3>Recetas</h3>
-    {{ recetas_frm|crispy }}
+
+    {% for form in recetas_frm %}
+        <div class="receta-form">
+            {{ form|crispy }}
+        </div>
+    {% endfor %}
     
     <hr>
     <h3>Derivaciones</h3>
@@ -29,6 +34,25 @@
 
 {% endblock %}
 {% block js_footer %}
+
     <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+
+    <script type="text/javascript" src="{% static 'js/jquery.formset.js' %}" type="text/javascript"> </script>
+
     {{ form.media }}
+
+
+<script type="text/javascript">
+    $('.receta-form').formset({
+        prefix: '{{ recetas_frm.prefix }}',
+        uiText: {
+            addPrompt: 'Agregar otro',         // Text used on the 'add a new form' control.
+            removePrompt: 'Eliminar',        // Text used on the 'delete this existing form' 
+        },
+        deleteCssClass: 'btn btn-sm btn-danger',
+        addCssClass: 'btn btn-sm btn-success'
+    });
+</script>
+
+
 {% endblock js_footer %}
