--- a/ggg/templates/base_admin.html
+++ b/ggg/templates/base_admin.html
@@ -34,6 +34,23 @@
     integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
     crossorigin="anonymous"></script>
 
+  <!-- Colores para ciudadanos, no administradores de muni-->
+  {% load extra_tags %}
+  {% es_municipal_admin user as admin_muni %}
+  {% if not admin_muni %}
+  <style>
+    #sidebar {
+      background: #22CC50;
+    }
+    #sidebar .sidebar-header,
+    #sidebar ul li.active > a,
+    a[aria-expanded="true"],
+    #sidebar ul ul a{
+      background: #509932;
+    }
+  </style>
+  {% endif %}
+
   {% block extra_head %}{% endblock %}
 </head>
 
