tratando de sincronizar selects

--- a/calendario/templates/calendario.html
+++ b/calendario/templates/calendario.html
@@ -27,6 +27,7 @@
     axios.defaults.xsrfHeaderName = "X-CSRFTOKEN"
   </script>
 
+  <script src="{% static 'calendario/js/consulta-form.js' %}"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/core/main.js'></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/bootstrap/main.js'></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/daygrid/main.js'></script>
