--- a/calendario/templates/calendario/add_appointment_form.html
+++ b/calendario/templates/calendario/add_appointment_form.html
@@ -18,7 +18,9 @@
       <p>{{ form.fields.servicio.label }}</p>
       {{ form.servicio }}
     </div>
-    <div class="col-12 col-md-5">
+    <div class="col-12 col-md-5"
+      id='lista_de_profesionales_filtrado'
+      data-profesionales-por-servicio-url="{% url 'profesional-autocomplete-por-servicio' servicio_id=0 %}">
       <p>{{ form.fields.profesional.label }}</p>
       {{ form.profesional }}
     </div>
