ver turnos en calendario, dependiendo el servicio

--- a/ggg/templates/menu_lat.html
+++ b/ggg/templates/menu_lat.html
@@ -87,7 +87,7 @@
         </li>
 
         <li>
-            <a href="{# TODO #}">Agendar un turno</a>
+            <a href="{% url 'calendario.agendar' %}">Agendar un turno</a>
         </li>
         {% endif %}
         
