--- a/ggg/templates/menu_lat.html
+++ b/ggg/templates/menu_lat.html
@@ -8,6 +8,12 @@
                 <a href="{% url 'profesionales.lista' %}">Lista</a>
             </li>
             {% endif %}
+
+            {% if perms.centros_de_salud.view_especialidad %}
+            <li>
+                <a href="{% url 'centros_de_salud.profesionales-en-servicio' %}">Profesionales en servicios</a>
+            </li>
+            {% endif %}
             
             {% if perms.profesionales.can_view_tablero %}
             <li>
@@ -72,7 +78,6 @@
                 <a href="{% url 'centros_de_salud.especialidades' %}">Especialidades</a>
             </li>
             {% endif %}
-            
             
         </ul>
     </li>
