se empieza a agrgar la carga predeterminada de minutos or especialidad pero falla

--- a/calendario/templates/calendario/add_appointment_form.html
+++ b/calendario/templates/calendario/add_appointment_form.html
@@ -14,7 +14,10 @@
       {{ form.bulk }}
     </div>
 
-    <div class="col-12 col-md-5">
+    <div class="col-12 col-md-5"
+               id='lista_de_servicios'
+               data-minutos="{{ tiempo_predeterminado_turno }}">
+
       <p>{{ form.fields.servicio.label }}</p>
       {{ form.servicio }}
     </div>
