definiendo entorno de autorizacion de usuarios en centros de salud

--- a/ggg/templates/base_admin.html
+++ b/ggg/templates/base_admin.html
@@ -49,8 +49,16 @@
   {% include "menu_lat.html" %}
 {% endif %}          
           <ul class="list-unstyled CTAs">
-            <li><a href="https://github.com/cluster311/ggg" class="download">+ info</a></li>
-            <!--<li><a href="#" class="article">Menu lindo 2</a></li>-->
+              <li>
+                <a target='_blank' 
+                  href="https://docs.google.com/document/d/1ePgRHtQiG81u2eF4qf48ozq4RMyviwgu/export?format=pdf" 
+                  class="download">Manual de usuario</a>
+              </li>
+              <li>
+                <a target='_blank' href="https://github.com/cluster311/ggg/blob/master/README.md" 
+                    class="article">+ info</a>
+              </li>
+            
           </ul>
       </nav>
 
