--- a/usuarios/templates/usuarios/usuarioencentrodesalud_update.html
+++ b/usuarios/templates/usuarios/usuarioencentrodesalud_update.html
@@ -3,8 +3,8 @@
 {% load static %}
 
 {% block content %}
-    <h2>Actualizar Servicio</h2>
-    <a role="button" class="btn btn-warning btn-sm active" href="{% url 'centros_de_salud.servicios' %}">Volver a la lista</a>
+    <h2>Actualizar Permiso de usuario en Centro de Salud</h2>
+    <a role="button" class="btn btn-warning btn-sm active" href="{% url 'usuarios.en-centro-de-salud' %}">Volver a la lista</a>
     {% crispy form %}
     <div class="line"></div>
 
