--- a/usuarios/templates/usuarios/usuarioencentrodesalud_form.html
+++ b/usuarios/templates/usuarios/usuarioencentrodesalud_form.html
@@ -3,8 +3,8 @@
 {% load static %}
 
 {% block content %}
-    <h2>Nuevo Servicio</h2>
-    <a role="button" class="btn btn-warning btn-sm active" href="{% url 'centros_de_salud.servicios' %}">Volver a la lista</a>
+    <h2>Nuevo Permiso a usuario en Centro de Salud</h2>
+    <a role="button" class="btn btn-warning btn-sm active" href="{% url 'usuarios.en-centro-de-salud' %}">Volver a la lista</a>
     <form method="post" novalidate>
     {% csrf_token %}
         {{ form|crispy}}
