--- a/usuarios/templates/usuarios/usuarioencentrodesalud_list.html
+++ b/usuarios/templates/usuarios/usuarioencentrodesalud_list.html
@@ -6,19 +6,21 @@
     <thead>
     <tr>
         <th scope="col">Centro de salud</th>
-        <th scope="col">Especialidad</th>
+        <th scope="col">Usuario</th>
+        <th scope="col">Estado</th>
         <th scope="col">Acciones</th>
     </tr>
     </thead>
     <tbody>
     {% for cs in object_list %}
 <tr>
-    <th scope="row">{{ cs.centro.nombre }}</th>
-    <th scope="row">{{ cs.especialidad }}</th>
+    <th scope="row">{{ cs.centro_de_salud.nombre }}</th>
+    <th scope="row">{{ cs.usuario }}</th>
+    <th scope="row">{{ cs.get_estado_display }}</th>
     <th scope="row">
-        <a role="button" class="btn btn-warning btn-sm active" href="{% url 'centros_de_salud.servicios.detail' pk=cs.id %}">Detalles</a>
+        <a role="button" class="btn btn-warning btn-sm active" href="{% url 'usuarios.en-centro-de-salud.detail' pk=cs.id %}">Detalles</a>
         {% if perms.centros_de_salud.change_servicio %}
-        <a role="button" class="btn btn-warning btn-sm active" href="{% url 'centros_de_salud.servicios.edit' pk=cs.id %}">Editar</a>
+        <a role="button" class="btn btn-warning btn-sm active" href="{% url 'usuarios.en-centro-de-salud.edit' pk=cs.id %}">Editar</a>
         {% endif %}
     </th>
 </tr>
