mostrar lista de centros de salud autorizados en la home

--- a/ggg/templates/admin_search_bar.html
+++ b/ggg/templates/admin_search_bar.html
@@ -1,6 +1,6 @@
 <form class="navbar-form" method="get">
     <div class="form-inline">
-       <input name="search" type="text" placeholder="buscar" class="form-control" value="{{ search_txt }}">
+       <input name="search" type="text" placeholder="buscar" class="form-control mr-sm-6" value="{{ search_txt }}">
        <button type="submit" class="btn btn-success">Buscar</button>
     </div>
 </form>
