--- a/calendario/templates/calendario-agregar.html
+++ b/calendario/templates/calendario-agregar.html
@@ -48,6 +48,15 @@
         eventSources: [{
             url: '{% url "calendario.feed" servicio=0 %}'.replace(0,servicio),
         }],
+        eventClick: function(info) {
+          $('#modal-body-text').text(
+            "¿Desea agendar un turno para el " + 
+            info.event.start.getDate() + "/" + info.event.start.getMonth() +
+            " a las " + info.event.start.getHours() + ":" 
+            + info.event.start.getMinutes() + " horas?"
+          );
+          $('#agendarModal').modal('show');
+        },
         defaultView: 'dayGridWeek',
         header: {
           left: 'prev,next today',
@@ -290,5 +299,34 @@
       <div id='calendar'></div>
     </div>
 
-  
+
+    
+
+{% endblock %}
+
+
+{% block unwrapped_content %}
+<div class="modal fade" id="agendarModal" tabindex="1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Agendar turno</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p id="modal-body-text"></p>
+        <div class="form-group">
+          <label for="dni" class="col-form-label">DNI Paciente:</label>
+          <input class="form-control" id="dni"></input>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary">Agendar</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
