estado confirmado, cuando llega el paciente

--- a/calendario/templates/calendario.html
+++ b/calendario/templates/calendario.html
@@ -53,13 +53,15 @@
         case 1: 
           //ASIGNADO
           break;
-        case 2: 
+        case 2:
+          //CONFIRMADO
+        case 3: 
           //ATENDIDO
           break;		
-        case 3:
+        case 4:
           //CANCELADO_PACIENTE
           break;
-        case 4: 
+        case 5: 
           //CANCELADO_ESTABLECIMIENTO
           break;
         default:
